--- a/style.css
+++ b/style.css
@@ -50,3 +50,20 @@ button:hover{
     cursor: pointer;
     background-color: cornflowerblue;
 }
+@media only screen and (max-width: 600px) {
+   
+    input{
+     width:60%;
+       
+       }
+       .container{
+       
+        width: 80%;
+        height: 60%;
+        left:10%;    
+        background-color: #fddb27ff;
+      
+        
+          
+    }      
+  }
